feat(update): more user entity stuff
