# src/generated/swagger.json
@@ -120,18 +120,10 @@
             "in": "path",
             "name": "id",
             "required": true,
+            "description": "The user's ID, can either be a Discord ID or a CordX Cornflake ID.",
             "schema": {
               "type": "string",
-              "description": "The users's ID, can either be a Discord ID or a CordX Cornflake ID."
-            }
-          },
-          {
-            "in": "query",
-            "name": "id_type",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "description": "The type of ID provided, can either be DISCORD or CORNFLAKE."
+              "description": "The user's ID, can either be a Discord ID or a CordX Cornflake ID."
             }
           }
         ],
@@ -147,7 +139,7 @@
             }
           },
           "400": {
-            "description": "Missing or invalid CordX Cornflake ID",
+            "description": "Missing or invalid ID",
             "content": {
               "application/json": {
                 "schema": {
@@ -312,6 +304,26 @@
       "UserEntity": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "string",
+            "description": "The user's Cornflake ID"
+          },
+          "name": {
+            "type": "string",
+            "description": "The user's name"
+          },
+          "handle": {
+            "type": "string",
+            "description": "The user's handle"
+          },
+          "type": {
+            "type": "string",
+            "description": "The type of entity"
+          },
+          "biography": {
+            "type": "string",
+            "description": "The user's biography"
+          },
           "avatar": {
             "type": "string",
             "description": "The user's Discord Avatar URL"
@@ -320,28 +332,34 @@
             "type": "string",
             "description": "The user's Discord Banner URL"
           },
-          "username": {
-            "type": "string",
-            "description": "The user's Discord Username"
-          },
-          "globalName": {
-            "type": "string",
-            "description": "The user's Discord Global Username"
-          },
           "userid": {
             "type": "string",
             "description": "The user's Discord ID"
           },
-          "entityId": {
+          "createdAt": {
             "type": "string",
-            "description": "The user's Entity ID"
+            "format": "date-time",
+            "description": "The date the entity was created"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "The date the entity was last updated"
           },
           "_count": {
             "type": "object",
             "properties": {
-              "orgs": {
+              "domains": {
                 "type": "number",
-                "description": "The number of organizations the user is in/owns"
+                "description": "The number of domains the user owns"
+              },
+              "uploads": {
+                "type": "number",
+                "description": "The number of uploads by the user"
+              },
+              "perms": {
+                "type": "number",
+                "description": "The number of permissions the user has"
               }
             }
           }
